Make path mutable